--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "4.4", features = ["derive"] }
 regex = "1.10.3"
+resolve-path = "0.1.0"
 
 #TODO: Investigate rweb to use openapi spec for free
 # https://github.com/kdy1/rweb
@@ -84,10 +85,12 @@ image = "0.24"
 ## GSTREAMER
 gst = { package = "gstreamer", version = "0.22", features = ["v1_16"] }
 gst-app = { package = "gstreamer-app", version = "0.22", features = ["v1_16"] }
+gst-pbutils = { package = "gstreamer-pbutils", version = "0.22", features = ["v1_16"] }
 gst-sdp = { package = "gstreamer-sdp", version = "0.22", features=["v1_16"] }
 gst-webrtc = { package = "gstreamer-webrtc", version = "0.22", features = ["v1_16"] }
 gst-rtsp = { package = "gstreamer-rtsp", version = "0.22", features = ["v1_16"] }
 gst-rtsp-server = { package = "gstreamer-rtsp-server", version = "0.22", features = ["v1_16"] }
+gst-sys = { package = "gstreamer-sys", version = "0.22", features = ["v1_16"] }
 gst-video = { package = "gstreamer-video", version = "0.22", features = ["v1_16"] }
 webrtc-sdp = "0.3.11"
 
