--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,7 +99,7 @@ constcat = "0.5.0"
 glib = "0.19.7"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-v4l = "0.14.0"
+v4l = { git = "https://github.com/raymanfx/libv4l-rs", sha = "6d171419c18659b54a6570a1294c047a8d704548" }
 
 [dev-dependencies]
 rand = "0.8.5"
